Fixed overflow in page

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -9,13 +9,16 @@
 	box-sizing: border-box;
 	font-family: "Montserrat", sans-serif;
 }
+html {
+	width: 100vw;
+	overflow-x: hidden;
+}
 
 body {
 	background-color: $background;
-	width: 100%;
+	max-width: 100vw;
 	height: auto;
 	min-height: 100vh;
-	box-shadow: -50px -20px 100px rgba(0, 0, 0, 0.4), 50px 50px 100px rgba(0, 0, 0, 0.4);
 	overflow-x: hidden;
 }
 
@@ -242,9 +245,9 @@ main {
 			}
 
 			.sticks {
-				width: 100%;
+				width: 90%;
+				margin: 0 auto;
 				height: 100%;
-				background-color: green;
 				background: url("../images/chop__sticks.svg");
 				background-repeat: no-repeat;
 				background-position: center;
@@ -253,6 +256,7 @@ main {
 				position: absolute;
 				top: 0;
 				left: 0;
+				right: 0;
 			}
 			.about__text {
 				width: 560px;
@@ -492,19 +496,18 @@ main {
 				}
 			}
 			.discount__image {
-				width: 32%;
-				height: 80%;
-				transform: rotate(45deg);
+				width: 100%;
+				height: 100%;
+				// transform: rotate(45deg);
 				position: absolute;
-				left: 400px;
-				top: 30px;
+				left: 0;
+				right: 0;
+				margin: 0 auto;
+				top: -120px;
 				img {
-					width: 250%;
-					height: 190%;
-					transform: rotate(-50deg);
-					position: absolute;
-					left: -200px;
-					top: -320px;
+					width: 120%;
+					height: 120%;
+					margin-left: -10%;
 				}
 			}
 		}
@@ -789,4 +792,7 @@ main {
 			}
 		}
 	}
+}
+
+@media screen and(max-width: 1024px) {
 }
